templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: team13app
  name: team13app
  namespace: team13
spec:
  gateways:
    - team13-gateway
  hosts:
    - '*'
  http:
    - match:
        - headers:
            user-agent:
              regex: .*Chrome.*
      rewrite:
        uri: /index-chrome.html
      route:
        - destination:
            host: team13-webpage
            port:
              number: 80
    - match:
        - headers:
            user-agent:
              regex: .*Firefox.*
      rewrite:
        uri: /index-firefox.html
      route:
        - destination:
            host: team13-webpage
            port:
              number: 80
